# CppCon2018

./: .gitattributes  README.md  Submitting.md
Keynotes/concepts_the_future_of_generic_programming/: .presentation
Keynotes/thoughts_on_a_more_powerful_and_simpler_cpp/: .presentation
Lightning Talks and Lunch Sessions/big_infrastructure_at_a_small_scale/: .presentation  README.md
Lightning Talks and Lunch Sessions/boost_di_inject_all_the_things/: .presentation
Lightning Talks and Lunch Sessions/emacs_bof/: .presentation  emacs_bof__jeff_trull__cppcon_2018.org
Lightning Talks and Lunch Sessions/fixing_twophase_initialization/: .presentation
Lightning Talks and Lunch Sessions/how_to_create_slides_about_cmake_with_cmake/: .presentation
Lightning Talks and Lunch Sessions/qt_signals_and_the_coroutines_ts/: .presentation
Lightning Talks and Lunch Sessions/rof_egnar/: .presentation
Lightning Talks and Lunch Sessions/set_it_and_forget_it/: .presentation
Lightning Talks and Lunch Sessions/study_group_14_cppcon_report/: .presentation
Lightning Talks and Lunch Sessions/study_group_14_the_story_so_far/: .presentation
Lightning Talks and Lunch Sessions/the_shape_of_a_program/: .presentation
Presentations/the_networking_ts_in_practice/: .gitignore  CMakeLists.txt  README.md  the_networking_ts_in_practice__robert_leahy__cppcon_2018.pptx
Presentations/the_networking_ts_in_practice/src/: CMakeLists.txt
Presentations/the_networking_ts_in_practice/src/asynchronous_operation/: CMakeLists.txt  asynchronous_operation.cpp  asynchronous_operation_associators.cpp  asynchronous_operation_get_executor.cpp  asynchronous_operation_strand.cpp  asynchronous_operation_testable.cpp  asynchronous_operation_universal.cpp
_tools/: add.py  readme_header.md
(+121 files in other folders)
